--- a/LyftTrip/LyftTrip/Base.lproj/Main.storyboard
+++ b/LyftTrip/LyftTrip/Base.lproj/Main.storyboard
@@ -1,26 +1,137 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="brC-cz-hrV">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Trip Logging-->
+        <scene sceneID="PkE-Xd-ZhB">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LyftTrip" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableViewController title="Trip Logging" id="xUg-jY-8TH" customClass="TripHistoryController" customModule="LyftTrip" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="QvJ-gC-SpI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToggleLoggingCell" id="Kgk-jq-ZaX" customClass="ToggleLoggingCell" customModule="LyftTrip" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="414" height="66"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kgk-jq-ZaX" id="7qz-k0-yYs">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Trip Logging" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0L-2P-Gbx">
+                                            <rect key="frame" x="16" y="20" width="117" height="26"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gt4-az-g2d">
+                                            <rect key="frame" x="357" y="17" width="51" height="31"/>
+                                        </switch>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="H0L-2P-Gbx" firstAttribute="centerY" secondItem="7qz-k0-yYs" secondAttribute="centerY" id="6sE-H6-MRF"/>
+                                        <constraint firstItem="H0L-2P-Gbx" firstAttribute="leading" secondItem="7qz-k0-yYs" secondAttribute="leadingMargin" constant="8" id="8vE-jI-So9"/>
+                                        <constraint firstItem="gt4-az-g2d" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H0L-2P-Gbx" secondAttribute="trailing" constant="8" id="B5B-Sq-tlE"/>
+                                        <constraint firstItem="gt4-az-g2d" firstAttribute="centerY" secondItem="7qz-k0-yYs" secondAttribute="centerY" id="eLZ-qP-RvF"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="gt4-az-g2d" secondAttribute="trailing" id="s0i-pG-G49"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="toggleLogging" destination="gt4-az-g2d" id="TL3-Gg-4tI"/>
+                                    <outlet property="tripLogging" destination="7qz-k0-yYs" id="wme-S3-lJs"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TripCell" textLabel="7TC-gB-fDQ" detailTextLabel="nO3-ru-X2Z" imageView="Zi0-Ih-iVD" style="IBUITableViewCellStyleSubtitle" id="sf2-So-Rb7">
+                                <rect key="frame" x="0.0" y="158" width="414" height="66"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sf2-So-Rb7" id="oJK-fZ-ZDL">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" id="7TC-gB-fDQ">
+                                            <rect key="frame" x="83" y="17" width="30" height="18"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nO3-ru-X2Z">
+                                            <rect key="frame" x="83" y="35" width="41" height="14"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="icon_car" id="Zi0-Ih-iVD">
+                                            <rect key="frame" x="15" y="12" width="53" height="41"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xUg-jY-8TH" id="Sjt-Fa-x9z"/>
+                            <outlet property="delegate" destination="xUg-jY-8TH" id="DqH-Zu-21i"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Rdy-ij-DWH"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V9J-KW-sjM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="989" y="221"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="o4U-PF-Hwp">
+            <objects>
+                <viewController id="Mfr-4k-QAv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SVY-nF-Yjl"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qed-15-5vc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Mnz-ee-Xj3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n0f-je-ffU" customClass="TripHistoryTitleView" customModule="LyftTrip" customModuleProvider="target">
+                                <rect key="frame" x="137" y="186" width="231" height="97"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ev9-bR-GSJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1574" y="207"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h1B-Jl-ltT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="brC-cz-hrV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7CU-7X-xdI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xUg-jY-8TH" kind="relationship" relationship="rootViewController" id="0U7-NZ-KLl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n5v-da-o6G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="177" y="221"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_car" width="53" height="41"/>
+    </resources>
 </document>
