--- a/LyftTrip/LyftTrip/Base.lproj/Main.storyboard
+++ b/LyftTrip/LyftTrip/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="PkE-Xd-ZhB">
             <objects>
                 <tableViewController title="Trip Logging" id="xUg-jY-8TH" customClass="TripHistoryController" customModule="LyftTrip" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="QvJ-gC-SpI">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="QvJ-gC-SpI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -87,30 +87,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V9J-KW-sjM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="989" y="221"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="o4U-PF-Hwp">
-            <objects>
-                <viewController id="Mfr-4k-QAv" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="SVY-nF-Yjl"/>
-                        <viewControllerLayoutGuide type="bottom" id="Qed-15-5vc"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Mnz-ee-Xj3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n0f-je-ffU" customClass="TripHistoryTitleView" customModule="LyftTrip" customModuleProvider="target">
-                                <rect key="frame" x="137" y="186" width="231" height="97"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ev9-bR-GSJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1574" y="207"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="h1B-Jl-ltT">
